[REFACTOR] RoomResponse 수정 (#111)